[gd_scene load_steps=11 format=2]

[ext_resource path="res://Graphics/Dino.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Graphics/jump.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.6, 8.563 )

[sub_resource type="Animation" id=4]
resource_name = "Jump"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Run"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Seat"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Seat_Stay"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 17 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Stay"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 7.47054, 7.03793 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Col_Run" type="CollisionShape2D" parent="."]
position = Vector2( 1.60511, -0.848003 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.87193, -1.35673 )
scale = Vector2( 1, 0.95 )
texture = ExtResource( 1 )
hframes = 24
frame = 17

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Jump = SubResource( 4 )
anims/Run = SubResource( 2 )
anims/Seat = SubResource( 5 )
anims/Seat_Stay = SubResource( 6 )
anims/Stay = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "New Bus"

[node name="Dash_timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Dash_cd" type="Timer" parent="."]
wait_time = 0.5

[node name="Col_Seat" type="CollisionShape2D" parent="."]
position = Vector2( 1.63878, 0.608686 )
shape = SubResource( 7 )
disabled = true
[connection signal="timeout" from="Dash_timer" to="." method="_on_Dash_timer_timeout"]
[connection signal="timeout" from="Dash_cd" to="." method="_on_Dash_cd_timeout"]
